--- a/dev/docker/docker-compose.yml
+++ b/dev/docker/docker-compose.yml
@@ -30,7 +30,7 @@ x-php: &php
     working_dir: /application
     user: "${SQ1_UID:-1000}:${SQ1_GID:-1000}"
     volumes:
-        - ../..:/application/www/public/wp-content/plugins/:package_slug:rw,nocopy,cached
+        - ../..:/application/www/public/wp-content/plugins/weglot-companion:rw,nocopy,cached
         - ../..:/application/www:rw,nocopy,cached
         - ./php/php-ini-overrides.ini:/usr/local/etc/php/conf.d/zz-overrides.ini
         - ./php/msmtp.conf:/etc/msmtprc:ro
@@ -44,9 +44,9 @@ x-php: &php
         - COMPOSER_MEMORY_LIMIT=-1
         - COMPOSER_PROCESS_TIMEOUT=0
         - COMPOSER_HOME=/application/.composer
-        - PHP_IDE_CONFIG=serverName=:package_slug.tribe
-        - DOMAIN_CURRENT_SITE=:package_slug.tribe
-        - DB_NAME=tribe_starter
+        - PHP_IDE_CONFIG=serverName=weglot-companion.tribe
+        - DOMAIN_CURRENT_SITE=weglot-companion.tribe
+        - DB_NAME=tribe_weglot_companion
         - DB_USER=root
         - DB_PASSWORD=password
         - DB_HOST=mysql
@@ -72,7 +72,7 @@ services:
         links:
             - php-fpm:php
         environment:
-            - VIRTUAL_HOST=:package_slug.tribe,*.:package_slug.tribe
+            - VIRTUAL_HOST=weglot-companion.tribe,*.weglot-companion.tribe
 
     ##################################################
     # Testing Containers
@@ -95,9 +95,9 @@ services:
             - COMPOSER_PROCESS_TIMEOUT=0
             - COMPOSER_HOME=/application/.composer
             - PAGER=more
-            - PHP_IDE_CONFIG=serverName=:package_slugtest.tribe
-            - DOMAIN_CURRENT_SITE=:package_slugtest.tribe
-            - DB_NAME=tribe_starter_acceptance
+            - PHP_IDE_CONFIG=serverName=weglot-companiontest.tribe
+            - DOMAIN_CURRENT_SITE=weglot-companiontest.tribe
+            - DB_NAME=tribe_weglot_companion_acceptance
             - DB_USER=root
             - DB_PASSWORD=password
             - DB_HOST=mysql
@@ -112,7 +112,7 @@ services:
         links:
             - php-tests:php
         environment:
-            - VIRTUAL_HOST=:package_slugtest.tribe,*.:package_slugtest.tribe
+            - VIRTUAL_HOST=weglot-companiontest.tribe,*.weglot-companiontest.tribe
 
     chrome:
         <<: *chrome
