--- a/dev/docker/nginx/nginx.conf
+++ b/dev/docker/nginx/nginx.conf
@@ -2,7 +2,7 @@ real_ip_header X-Forwarded-For;
 
 server {
     listen 80 default_server;
-    server_name :package_slug.tribe;
+    server_name weglot-companion.tribe;
 
     client_max_body_size 108M;
 
@@ -17,7 +17,7 @@ server {
     fastcgi_buffer_size 32k;
 
     # Allow plugin resources to load
-    location /wp-content/plugins/:package_slug/resources {
+    location /wp-content/plugins/weglot-companion/resources {
         alias /application/www/resources;
     }
 
