--- a/dev/tests/.env-dist
+++ b/dev/tests/.env-dist
@@ -1,19 +1,19 @@
 WP_ROOT_FOLDER="/application/www/public/wp"
 
-WP_DOMAIN=":package_slugtest.tribe"
+WP_DOMAIN="weglot-companiontest.tribe"
 
 WP_ADMIN_PATH="/wp-admin"
 WP_ADMIN_USERNAME="admin"
 WP_ADMIN_PASSWORD="password"
 
-WP_URL="http://:package_slugtest.tribe"
+WP_URL="http://weglot-companiontest.tribe"
 TEST_DB_HOST="mysql"
-TEST_DB_NAME="tribe_starter_tests"
+TEST_DB_NAME="tribe_weglot_companion_tests"
 TEST_DB_USER="root"
 TEST_DB_PASSWORD="password"
 
-ACCEPTANCE_WP_URL="http://:package_slugtest.tribe"
-ACCEPTANCE_DB_NAME=tribe_starter_acceptance
+ACCEPTANCE_WP_URL="http://weglot-companiontest.tribe"
+ACCEPTANCE_DB_NAME=tribe_weglot_companion_acceptance
 ACCEPTANCE_DB_HOST=mysql
 ACCEPTANCE_DB_USER=root
 ACCEPTANCE_DB_PASS=password
