--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
 
     env:
       cache_version: 1 # increment to flush all caches
-      PROJECT_ID: :package_slug
+      PROJECT_ID: weglot-companion
       COMPOSE_INTERACTIVE_NO_CLI: 1
       COMPOSE_FILE: docker-compose.yml:docker-compose.gh.yml
 
@@ -89,8 +89,8 @@ jobs:
 
       - name: Create test databases
         run: |
-          mysql -h 127.0.0.1 -uroot -ppassword -e "CREATE DATABASE tribe_starter_tests;"
-          mysql -h 127.0.0.1 -uroot -ppassword -e "CREATE DATABASE tribe_starter_acceptance;"
+          mysql -h 127.0.0.1 -uroot -ppassword -e "CREATE DATABASE tribe_weglot_companion_tests;"
+          mysql -h 127.0.0.1 -uroot -ppassword -e "CREATE DATABASE tribe_weglot_companion_acceptance;"
 
       - name: Run unit tests
         run: docker-compose --project-name=${{ env.PROJECT_ID }} exec -T php-tests php /application/www/vendor/bin/codecept --config "/application/www/dev/tests" run unit
