--- a/dev/tests/codeception.dist.yml
+++ b/dev/tests/codeception.dist.yml
@@ -66,7 +66,7 @@ modules:
             theme: twentytwentytwo
             plugins:
                 - advanced-custom-fields-pro/acf.php
-                - :package_slug/core.php
+                - weglot-companion/core.php
             activatePlugins:
                 - advanced-custom-fields-pro/acf.php
-                - :package_slug/core.php
+                - weglot-companion/core.php
