--- a/dev/tests/codeception.dist.yml
+++ b/dev/tests/codeception.dist.yml
@@ -66,7 +66,9 @@ modules:
             theme: twentytwentytwo
             plugins:
                 - advanced-custom-fields-pro/acf.php
+                - weglot/weglot.php
                 - weglot-companion/core.php
             activatePlugins:
                 - advanced-custom-fields-pro/acf.php
+                - weglot/weglot.php
                 - weglot-companion/core.php
