--- a/dev/tests/codeception.dist.yml
+++ b/dev/tests/codeception.dist.yml
@@ -37,7 +37,7 @@ modules:
             dump: tests/_data/dump.sql
             url: '%ACCEPTANCE_WP_URL%'
             tablePrefix: '%TABLE_PREFIX%'
-            urlReplacement: false
+            urlReplacement: true
             # populate: true (We recommend each suite define this parameter explicitly)
             # cleanup: true (We recommend each suite define this parameter explicitly)
         WPBrowser:
