--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
   ],
   "repositories": [
     {
+      "type": "composer",
+      "url": "https://wpackagist.org"
+    },
+    {
       "type": "package",
       "package": {
         "name": "advanced-custom-fields/advanced-custom-fields-pro",
@@ -54,7 +58,8 @@
     "larapack/dd": "^1.1",
     "lucatume/function-mocker": "^1.3",
     "lucatume/wp-browser": "^3.0",
-    "moderntribe/coding-standards": "^2.0"
+    "moderntribe/coding-standards": "^2.0",
+    "wpackagist-plugin/weglot": "^3.6"
   },
   "autoload": {
     "psr-4": {
@@ -86,6 +91,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "extra": {
+    "enable-patching": true,
     "wordpress-install-dir": "public/wp",
     "installer-paths": {
       "public/wp-content/plugins/{$name}": [
