--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     "ext-json": "*",
     "ext-readline": "*",
     "johnbillion/extended-cpts": "^4.0||^5.0",
+    "league/uri": "^6.5",
     "moderntribe/tribe-libs": "^3.4.13",
     "spatie/data-transfer-object": "^2.8"
   },
