--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
       "type": "package",
       "package": {
         "name": "advanced-custom-fields/advanced-custom-fields-pro",
-        "version": "5.12.2",
+        "version": "5.12.3",
         "type": "wordpress-plugin",
         "dist": {
           "type": "zip",
@@ -36,7 +36,7 @@
     }
   ],
   "require": {
-    "php": "^7.4||^8.0",
+    "php": ">=7.4",
     "ext-json": "*",
     "ext-readline": "*",
     "johnbillion/extended-cpts": "^4.0||^5.0",
@@ -59,7 +59,7 @@
     "larapack/dd": "^1.1",
     "lucatume/function-mocker": "^1.3",
     "lucatume/wp-browser": "^3.0",
-    "moderntribe/coding-standards": "^2.0",
+    "moderntribe/coding-standards": "^3.0",
     "wpackagist-plugin/weglot": "^3.6"
   },
   "autoload": {
